--- a/src/app/components/pies/order-pie/order-pie.component.scss
+++ b/src/app/components/pies/order-pie/order-pie.component.scss
@@ -1,6 +1,6 @@
 @import 'abstracts/variables';
 
-.preview-details {
+.order-preview {
 	&__row { 
         display: flex;
         flex-direction: row;
