--- a/src/app/components/pies/pie-view/pie-view.component.html
+++ b/src/app/components/pies/pie-view/pie-view.component.html
@@ -40,6 +40,32 @@
           (click)="orderPie()"
         >ЗАКАЗАТЬ ТОВАР</button>
       </form>
+
+      <div class="pie-view__delivery-section delivery-section">
+        <div class="delivery-section__item">
+          <span class="delivery-section__pickup-icon"></span>
+          <p>
+            Возможность <br>
+            самовызова
+          </p>
+        </div>
+        <div class="delivery-section__item">
+          <span class="delivery-section__delivery-icon"></span>
+          <p>
+            Персональная <br>
+            доставка
+          </p>
+          
+        </div>
+        <div class="delivery-section__item">
+          <span class="delivery-section__yandex-icon"></span>
+          <p>
+            Яндекс <br>
+            Доставка
+          </p>
+        </div>
+      </div>
+      
     </div>
   </div>
 </article>
