--- a/src/app/components/pies/pie-view/pie-view.component.scss
+++ b/src/app/components/pies/pie-view/pie-view.component.scss
@@ -35,16 +35,16 @@
 
     &__body {
         flex: 0 1 60%;
-        padding: 0px 0px 0px 1em;
+        padding: 0px 3em;
     }
 
     // quantity information
     &__parameters {
         display: flex;
         justify-content: space-evenly;
-        font-size: 1.65rem;
+        font-size: 1.4rem;
         font-weight: 500;
-        margin-bottom: 1em;
+        margin-bottom: 1.07em;
     }
 
     &__weight {
@@ -99,6 +99,8 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+
+        margin-bottom: 3rem;
     }
 
     &__quantity-counter {
@@ -142,5 +144,52 @@
         border: 1px solid transparent;
         border-top-left-radius: 0.25rem;
         border-top-right-radius: 0.25rem;
+    }
+}
+
+.delivery-section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+
+	&__item { 
+        display: flex;
+        flex-direction: row;
+
+        font-size: .875rem;
+        font-weight: 500;
+        text-transform: uppercase;
+    }
+
+    &__pickup-icon::before{
+        display: inline-block;
+        content: '';
+        background-image: url('/assets/icons/delivered.png');
+        background-size: 40px 40px;
+        height: 40px;
+        width: 40px;
+        margin: 0px 0.80em 0px 0px;
+    }
+
+    &__delivery-icon::before{
+        display: inline-block;
+        content: '';
+        background-image: url('/assets/icons/fast-delivery.png');
+        background-size: 40px 40px;
+        height: 40px;
+        width: 40px;
+        margin: 0px 0.80em 0px 0px;
+    }
+
+    &__yandex-icon::before{
+        display: inline-block;
+        content: '';
+        background-image: url('/assets/icons/taxi.png');
+        background-size: 40px 40px;
+        height: 40px;
+        width: 40px;
+        margin: 0px 0.80em 0px 0px;
     }
 }
