--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -30,25 +30,19 @@
             <a 
               class="menu__link"
               (click)="redirectToPage('#')"
-            >Пироги</a>
+            >Пирожные</a>
           </li>
           <li>
             <a 
               class="menu__link"
               (click)="redirectToPage('#')"
-            >Капкейки</a>
+            >Тарталетки</a>
           </li>
           <li>
             <a 
               class="menu__link"
               (click)="redirectToPage('#')"
             >Зефир</a>
-          </li>
-          <li>
-            <a 
-              class="menu__link"
-              (click)="redirectToPage('#')"
-            >Мармелад</a>
           </li>
           <li>
             <a 
