--- a/src/app/scss/abstracts/_variables.scss
+++ b/src/app/scss/abstracts/_variables.scss
@@ -5,3 +5,5 @@ $bacis-white: white !default;
 
 $light-gray: rgb(245, 246, 246) !default;
 $shadow-gray: #ccc !default;
+
+$dark-brown : #212121 !default;
