use behavior subjects in the services

--- a/src/app/components/pies/order-pie/order-pie.component.html
+++ b/src/app/components/pies/order-pie/order-pie.component.html
@@ -1,6 +1,6 @@
 <div 
   class="order-preview"
-  *ngIf="!pieService.isLoading && pieService.selectedPie as pie"
+  *ngIf="!isLoading && selectedPie as pie"
 >
   <div class="order-preview__row">
     <div class="order-preview__image">
