add spinner for loading product

--- a/src/app/components/pies/pie-view/pie-view.component.html
+++ b/src/app/components/pies/pie-view/pie-view.component.html
@@ -71,7 +71,7 @@
 </article>
 
 <ng-template #pieLoading>
-  <p>Товары загружаются...</p>
+  <app-progress-spinner></app-progress-spinner>
 </ng-template>
 
 <app-popup *ngIf="isDisplayModal" title="Заказать продукт">
