--- a/src/app/components/confections/confection-view/confection-view.component.scss
+++ b/src/app/components/confections/confection-view/confection-view.component.scss
@@ -1,7 +1,7 @@
 @import 'abstracts/variables';
 @import 'components/buttons';
 
-.pie-view {
+.confection-view {
     &__row{
         display: flex;
         flex-wrap: wrap;
