--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -23,7 +23,7 @@
           <li>
             <a 
               class="menu__link"
-              (click)="redirectToPage('pies')"
+              (click)="redirectToPage('cakes')"
             >Торты</a>
           </li>
           <li>
