--- a/src/app/components/confections/confection-card/confection-card.component.html
+++ b/src/app/components/confections/confection-card/confection-card.component.html
@@ -1,14 +1,14 @@
-<div class="product-item"> 
-  <div class="product-item__image">
+<div class="confection-card"> 
+  <div class="confection-card__image">
     <a (click)="openProductView()">
       <img [src]="confection.imageUrl" [alt]="confection.name"> 
     </a>
   </div>
   
-  <a class="product-item__title" (click)="openProductView()">{{ confection.name }}</a>
+  <a class="confection-card__title" (click)="openProductView()">{{ confection.name }}</a>
 
-  <div class="product-item__details product-details">
-    <div class="product-details__price-section price-section">
+  <div class="confection-card__details card-details">
+    <div class="card-details__price-section price-section">
       <div class="price-section__price">{{ confection.price }} р.</div>
       <div class="price-section__action">
         <span class="price-section__weight">2200 гр</span> <!--replace hardcored value-->
@@ -17,7 +17,7 @@
     </div>
 
     <button 
-      class="product-details__order-button"
+      class="card-details__order-button"
       (click)="openProductView()"
     >ЗАКАЗАТЬ</button>
   </div>
