--- a/src/app/components/confections/confection-section/confection-section.component.scss
+++ b/src/app/components/confections/confection-section/confection-section.component.scss
@@ -1,14 +1,26 @@
 @import 'abstracts/variables';
 
-.product {
-    &__row {
+.confection-section {
+    &__header{
+        padding: 0 15px;
+        margin-top: 15px;
+    }
+
+    &__title {
+        color: $light-orange;
+        
+        font-size: 1.5rem;
+        padding: 0.5rem;
+    }
+
+    &__body {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         width: 100%;
     }
 
-    &__column {
+    &__item {
         float: left;
         width: 25%;
         padding: 10px;
@@ -28,6 +40,7 @@
     }
 }
 
+//todo: remove after refactoring
 .controls {
     &__row {
         display: flex;
