--- a/src/app/components/confections/confection-detail/confection-detail.component.scss
+++ b/src/app/components/confections/confection-detail/confection-detail.component.scss
@@ -1,7 +1,7 @@
 @import 'abstracts/variables';
 @import 'components/buttons';
 
-.confection-view {
+.confection-detail {
     &__row{
         display: flex;
         flex-wrap: wrap;
