--- a/src/app/components/confections/confection-catalog/confection-catalog.component.html
+++ b/src/app/components/confections/confection-catalog/confection-catalog.component.html
@@ -1,9 +1,31 @@
 <div 
   class="confection-catalog"
-  *ngFor="let confectionMapping in confectionMappings"
+  *ngIf="!isLoading && confectionMappings; else noConfectionMappings"
 >
-  <app-confection-section 
-    [sectionTitle]="confectionMapping.confetionType" 
-    [confections]="confectionMapping.confetions"
-  ></app-confection-section>
+  <div 
+    class="confection-catalog__content"
+    *ngFor="let confectionMapping of confectionMappings"
+  >
+    <app-confection-section 
+      [sectionTitle]="mapConfectionTypeToTitle(confectionMapping.confetionType)" 
+      [confections]="confectionMapping.confetions"
+    ></app-confection-section>
+  </div>
 </div>
+
+<ng-template #noConfectionMappings>
+  <app-progress-spinner></app-progress-spinner>
+</ng-template>
+
+<!-- <div *ngIf="confections | filterConfections: term as filteredConfections">
+  <app-no-product-found *ngIf="!isLoading && filteredConfections.length === 0"></app-no-product-found>
+</div> -->
+
+<app-popup *ngIf="isDisplayModal" title="Добавить продукт">
+  <app-create-confection></app-create-confection>
+</app-popup>
+
+<button
+  class="rounded-full bg-red-700 text-white fixed right-5 bottom-5 py-2 px-4"
+  (click)="displayModal()"
+>+</button>
