introduce mappers for matching by confection type

--- a/src/app/components/confections/confection-catalog/confection-catalog.component.html
+++ b/src/app/components/confections/confection-catalog/confection-catalog.component.html
@@ -7,7 +7,7 @@
     *ngFor="let confectionMapping of confectionMappings"
   >
     <app-confection-section 
-      [sectionTitle]="mapConfectionTypeToTitle(confectionMapping.confetionType)" 
+      [confectionType]="confectionMapping.confetionType" 
       [confections]="confectionMapping.confetions"
     ></app-confection-section>
   </div>
