--- a/src/app/scss/base/_base.scss
+++ b/src/app/scss/base/_base.scss
@@ -1,5 +1,8 @@
 html, body { height: 100%; }
-body { margin: 0; font-family: IBM Plex Sans; font-weight: 400; }
+body { 
+    width: 100%;
+    font: 400 14px/20px Roboto, "Helvetica Neue", sans-serif;
+}
 
 body.locked {
     overflow: hidden;
