add reset styles

--- a/src/app/components/confections/order-confection/order-confection.component.scss
+++ b/src/app/components/confections/order-confection/order-confection.component.scss
@@ -95,7 +95,7 @@
     &__input {
         width: 100%;
         padding: .5rem 1rem;
-        border-width: 1px;
+        border: 1px solid #ebecef;
         margin-bottom: 0.5rem;
 
         &:nth-child(4){
