--- a/src/app/scss/base/_reset.scss
+++ b/src/app/scss/base/_reset.scss
@@ -12,7 +12,7 @@
 a:focus,a:active{outline: none;}
 nav,footer,header,aside{display: block;}
 html,body{
-	height: 100%;
+	min-height: 100%;
 	width: 100%;
 	font-size: 100%;
 	line-height: 1;
@@ -34,5 +34,10 @@ button::-moz-focus-inner {padding:0;border:0;}
 a, a:visited{text-decoration: none; color: inherit;}
 a:hover{text-decoration: none;}
 ul li{list-style: none;}
-img{vertical-align: top;}
+img{
+	display: block;
+	max-width: 100%;
+    height: auto;
+	vertical-align: middle;
+}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
