--- a/src/app/scss/abstracts/_variables.scss
+++ b/src/app/scss/abstracts/_variables.scss
@@ -5,5 +5,6 @@ $bacis-white: white !default;
 
 $light-gray: rgb(245, 246, 246) !default;
 $shadow-gray: #ccc !default;
+$transparent-gray: rgba(216, 216, 216, 0.445) !important;
 
 $dark-brown : #212121 !default;
