add functionality for the scroll-bar

--- a/src/app/scss/abstracts/_variables.scss
+++ b/src/app/scss/abstracts/_variables.scss
@@ -4,7 +4,9 @@ $golden-color: #eac994 !default;
 $bacis-white: white !default;
 
 $light-gray: rgb(245, 246, 246) !default;
-$shadow-gray: #ccc !default;
-$transparent-gray: rgba(216, 216, 216, 0.445) !important;
+$transparent-gray: rgba(216, 216, 216, 0.445) !default;
 
 $dark-brown : #212121 !default;
+
+$shadow: rgba(0, 0, 0, 0.15) !default;
+$shadow-gray: #ccc !default;
