add flex for header icons

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -17,25 +17,28 @@
         <div class="header__social-links social-links">
           <a class="social-links__link" href="">Контакты</a>
           <a class="social-links__link" href="">
-            <img 
-              class="social-links__image" 
-              src="/assets/icons/facebook.svg" 
-              alt="facebook"
-            >
+            <div class="social-links__image">
+              <img 
+                src="/assets/icons/facebook.svg" 
+                alt="facebook"
+              >
+            </div>
           </a>
           <a class="social-links__link" href="">
-            <img 
-              class="social-links__image" 
-              src="/assets/icons/ok.svg" 
-              alt="ok"
-            >
+            <div class="social-links__image">
+              <img 
+                src="/assets/icons/ok.svg" 
+                alt="ok"
+              >
+            </div>
           </a>
           <a class="social-links__link" href="">
-            <img 
-              class="social-links__image" 
-              src="/assets/icons/instagram.svg" 
-              alt="instagram"
-            >
+            <div class="social-links__image">
+              <img 
+                src="/assets/icons/instagram.svg" 
+                alt="instagram"
+              >
+            </div>
           </a>
         </div>
       </div>
