change confection model

--- a/src/app/components/confections/confection-detail/confection-detail.component.html
+++ b/src/app/components/confections/confection-detail/confection-detail.component.html
@@ -9,7 +9,7 @@
     <div class="confection-detail__body">
       <h3 class="confection-detail__title">{{ confection.name }}</h3>
       <span class="confection-detail__parameters">
-        <div class="confection-detail__weight">2200</div>
+        <div class="confection-detail__weight">{{ confection.weight }} гр</div>
         <div class="confection-detail__portions">{{ confection.minimumPortions }}-{{ confection.maximumPortions }} порций</div>
       </span>
       <div class="confection-detail__details">
