remove portions, rework weight displaying

--- a/src/app/components/confections/confection-card/confection-card.component.html
+++ b/src/app/components/confections/confection-card/confection-card.component.html
@@ -11,8 +11,8 @@
     <div class="card-details__price-section price-section">
       <div class="price-section__price">{{ confection.price }} р.</div>
       <div class="price-section__action">
-        <span class="price-section__weight">2200 гр</span> <!--replace hardcored value-->
-        <span class="price-section__portions">{{ confection.minimumPortions }}-{{ confection.maximumPortions }} порций</span>
+        <span class="price-section__lable">Вес (за)</span>
+        <span class="price-section__weight">{{ confection.weight }} гр</span>
       </div>
     </div>
 
